MegaScryptLib/Generated/MegaScryptParser.cs
//------------------------------------------------------------------------------
// <auto-generated>
//     This code was generated by a tool.
//     ANTLR Version: 4.8
//
//     Changes to this file may cause incorrect behavior and will be lost if
//     the code is regenerated.
// </auto-generated>
//------------------------------------------------------------------------------

// Generated from MegaScrypt.g4 by ANTLR 4.8

// Unreachable code detected
#pragma warning disable 0162
// The variable '...' is assigned but its value is never used
#pragma warning disable 0219
// Missing XML comment for publicly visible type or member '...'
#pragma warning disable 1591
// Ambiguous reference in cref attribute
#pragma warning disable 419

using System;
using System.IO;
using System.Text;
using System.Diagnostics;
using System.Collections.Generic;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

[System.CodeDom.Compiler.GeneratedCode("ANTLR", "4.8")]
[System.CLSCompliant(false)]
public partial class MegaScryptParser : Parser {
	protected static DFA[] decisionToDFA;
	protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
	public const int
		T__0=1, T__1=2, T__2=3, T__3=4, T__4=5, T__5=6, T__6=7, T__7=8, T__8=9, 
		T__9=10, T__10=11, T__11=12, T__12=13, T__13=14, True=15, False=16, Var=17, 
		Equals=18, Underscore=19, Add=20, Increment=21, Minus=22, Decrement=23, 
		Break=24, Continue=25, Multiply=26, Divide=27, LeftParenthesis=28, RightParenthesis=29, 
		Dot=30, And=31, Modulus=32, Or=33, Not=34, DivideEquals=35, SubEquals=36, 
		MultiplyEquals=37, AddEquals=38, DoubleEquals=39, NotEquals=40, LessOrEqual=41, 
		GreaterOrEqual=42, GreaterThan=43, LessThan=44, LeftBracket=45, RightBracket=46, 
		Null=47, Id=48, Number=49, String=50, WhiteSpace=51;
	public const int
		RULE_program = 0, RULE_statement = 1, RULE_compoundId = 2, RULE_declaration = 3, 
		RULE_assignment = 4, RULE_increment = 5, RULE_bincrement = 6, RULE_block = 7, 
		RULE_ifStmt = 8, RULE_elseifStmt = 9, RULE_elseStmt = 10, RULE_expression = 11, 
		RULE_funcDeclearation = 12, RULE_varList = 13, RULE_returnStmt = 14, RULE_invocation = 15, 
		RULE_paramList = 16, RULE_object = 17, RULE_objectPair = 18, RULE_objectGet = 19, 
		RULE_objectValidEntry = 20, RULE_array = 21, RULE_arrayIndex = 22, RULE_forLoop = 23, 
		RULE_whileLoop = 24, RULE_forEachLoop = 25, RULE_doWhileLoop = 26;
	public static readonly string[] ruleNames = {
		"program", "statement", "compoundId", "declaration", "assignment", "increment", 
		"bincrement", "block", "ifStmt", "elseifStmt", "elseStmt", "expression", 
		"funcDeclearation", "varList", "returnStmt", "invocation", "paramList", 
		"object", "objectPair", "objectGet", "objectValidEntry", "array", "arrayIndex", 
		"forLoop", "whileLoop", "forEachLoop", "doWhileLoop"
	};

	private static readonly string[] _LiteralNames = {
		null, "';'", "'{'", "'}'", "'if'", "'else'", "'function'", "','", "'return'", 
		"':'", "'for'", "'while'", "'foreach'", "'in'", "'do'", "'true'", "'false'", 
		"'var'", "'='", "'_'", "'+'", "'++'", "'-'", "'--'", "'break'", "'continue'", 
		"'*'", "'/'", "'('", "')'", "'.'", "'&&'", "'%'", "'||'", "'!'", "'/='", 
		"'-='", "'*='", "'+='", "'=='", "'!='", "'<='", "'>='", "'>'", "'<'", 
		"'['", "']'", "'null'"
	};
	private static readonly string[] _SymbolicNames = {
		null, null, null, null, null, null, null, null, null, null, null, null, 
		null, null, null, "True", "False", "Var", "Equals", "Underscore", "Add", 
		"Increment", "Minus", "Decrement", "Break", "Continue", "Multiply", "Divide", 
		"LeftParenthesis", "RightParenthesis", "Dot", "And", "Modulus", "Or", 
		"Not", "DivideEquals", "SubEquals", "MultiplyEquals", "AddEquals", "DoubleEquals", 
		"NotEquals", "LessOrEqual", "GreaterOrEqual", "GreaterThan", "LessThan", 
		"LeftBracket", "RightBracket", "Null", "Id", "Number", "String", "WhiteSpace"
	};
	public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

	[NotNull]
	public override IVocabulary Vocabulary
	{
		get
		{
			return DefaultVocabulary;
		}
	}

	public override string GrammarFileName { get { return "MegaScrypt.g4"; } }

	public override string[] RuleNames { get { return ruleNames; } }

	public override string SerializedAtn { get { return new string(_serializedATN); } }

	static MegaScryptParser() {
		decisionToDFA = new DFA[_ATN.NumberOfDecisions];
		for (int i = 0; i < _ATN.NumberOfDecisions; i++) {
			decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
		}
	}

		public MegaScryptParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

		public MegaScryptParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
		: base(input, output, errorOutput)
	{
		Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
	}

	public partial class ProgramContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext[] block() {
			return GetRuleContexts<BlockContext>();
		}
		public BlockContext block(int i) {
			return GetRuleContext<BlockContext>(i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_program; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitProgram(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ProgramContext program() {
		ProgramContext _localctx = new ProgramContext(Context, State);
		EnterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 58;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__1) | (1L << T__3) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << Var) | (1L << Increment) | (1L << Decrement) | (1L << Break) | (1L << Continue) | (1L << Id))) != 0)) {
				{
				State = 56;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,0,Context) ) {
				case 1:
					{
					State = 54; statement();
					}
					break;
				case 2:
					{
					State = 55; block();
					}
					break;
				}
				}
				State = 60;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class StatementContext : ParserRuleContext {
		public DeclarationContext declaration() {
			return GetRuleContext<DeclarationContext>(0);
		}
		public AssignmentContext assignment() {
			return GetRuleContext<AssignmentContext>(0);
		}
		public IncrementContext increment() {
			return GetRuleContext<IncrementContext>(0);
		}
		public BincrementContext bincrement() {
			return GetRuleContext<BincrementContext>(0);
		}
		public InvocationContext invocation() {
			return GetRuleContext<InvocationContext>(0);
		}
		public ReturnStmtContext returnStmt() {
			return GetRuleContext<ReturnStmtContext>(0);
		}
		public ITerminalNode Break() { return GetToken(MegaScryptParser.Break, 0); }
		public ITerminalNode Continue() { return GetToken(MegaScryptParser.Continue, 0); }
		public IfStmtContext ifStmt() {
			return GetRuleContext<IfStmtContext>(0);
		}
		public ForLoopContext forLoop() {
			return GetRuleContext<ForLoopContext>(0);
		}
		public WhileLoopContext whileLoop() {
			return GetRuleContext<WhileLoopContext>(0);
		}
		public ForEachLoopContext forEachLoop() {
			return GetRuleContext<ForEachLoopContext>(0);
		}
		public DoWhileLoopContext doWhileLoop() {
			return GetRuleContext<DoWhileLoopContext>(0);
		}
		public StatementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_statement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitStatement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public StatementContext statement() {
		StatementContext _localctx = new StatementContext(Context, State);
		EnterRule(_localctx, 2, RULE_statement);
		try {
			State = 77;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__7:
			case Var:
			case Increment:
			case Decrement:
			case Break:
			case Continue:
			case Id:
				EnterOuterAlt(_localctx, 1);
				{
				State = 69;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,2,Context) ) {
				case 1:
					{
					State = 61; declaration();
					}
					break;
				case 2:
					{
					State = 62; assignment();
					}
					break;
				case 3:
					{
					State = 63; increment();
					}
					break;
				case 4:
					{
					State = 64; bincrement();
					}
					break;
				case 5:
					{
					State = 65; invocation();
					}
					break;
				case 6:
					{
					State = 66; returnStmt();
					}
					break;
				case 7:
					{
					State = 67; Match(Break);
					}
					break;
				case 8:
					{
					State = 68; Match(Continue);
					}
					break;
				}
				State = 71; Match(T__0);
				}
				break;
			case T__3:
				EnterOuterAlt(_localctx, 2);
				{
				State = 72; ifStmt();
				}
				break;
			case T__9:
				EnterOuterAlt(_localctx, 3);
				{
				State = 73; forLoop();
				}
				break;
			case T__10:
				EnterOuterAlt(_localctx, 4);
				{
				State = 74; whileLoop();
				}
				break;
			case T__11:
				EnterOuterAlt(_localctx, 5);
				{
				State = 75; forEachLoop();
				}
				break;
			case T__13:
				EnterOuterAlt(_localctx, 6);
				{
				State = 76; doWhileLoop();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class CompoundIdContext : ParserRuleContext {
		public ObjectGetContext objectGet() {
			return GetRuleContext<ObjectGetContext>(0);
		}
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public CompoundIdContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_compoundId; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitCompoundId(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public CompoundIdContext compoundId() {
		CompoundIdContext _localctx = new CompoundIdContext(Context, State);
		EnterRule(_localctx, 4, RULE_compoundId);
		try {
			State = 81;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,4,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 79; objectGet();
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 80; Match(Id);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class DeclarationContext : ParserRuleContext {
		public ITerminalNode Var() { return GetToken(MegaScryptParser.Var, 0); }
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ObjectGetContext objectGet() {
			return GetRuleContext<ObjectGetContext>(0);
		}
		public ITerminalNode Equals() { return GetToken(MegaScryptParser.Equals, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ObjectContext @object() {
			return GetRuleContext<ObjectContext>(0);
		}
		public ArrayContext array() {
			return GetRuleContext<ArrayContext>(0);
		}
		public DeclarationContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_declaration; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitDeclaration(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public DeclarationContext declaration() {
		DeclarationContext _localctx = new DeclarationContext(Context, State);
		EnterRule(_localctx, 6, RULE_declaration);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 83; Match(Var);
			State = 86;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,5,Context) ) {
			case 1:
				{
				State = 84; Match(Id);
				}
				break;
			case 2:
				{
				State = 85; objectGet();
				}
				break;
			}
			State = 94;
			ErrorHandler.Sync(this);
			_la = TokenStream.LA(1);
			if (_la==Equals) {
				{
				State = 88; Match(Equals);
				State = 92;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,6,Context) ) {
				case 1:
					{
					State = 89; expression(0);
					}
					break;
				case 2:
					{
					State = 90; @object();
					}
					break;
				case 3:
					{
					State = 91; array();
					}
					break;
				}
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class AssignmentContext : ParserRuleContext {
		public CompoundIdContext compoundId() {
			return GetRuleContext<CompoundIdContext>(0);
		}
		public ITerminalNode Equals() { return GetToken(MegaScryptParser.Equals, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ObjectContext @object() {
			return GetRuleContext<ObjectContext>(0);
		}
		public ArrayContext array() {
			return GetRuleContext<ArrayContext>(0);
		}
		public ITerminalNode DivideEquals() { return GetToken(MegaScryptParser.DivideEquals, 0); }
		public ITerminalNode MultiplyEquals() { return GetToken(MegaScryptParser.MultiplyEquals, 0); }
		public ITerminalNode AddEquals() { return GetToken(MegaScryptParser.AddEquals, 0); }
		public ITerminalNode SubEquals() { return GetToken(MegaScryptParser.SubEquals, 0); }
		public AssignmentContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_assignment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitAssignment(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public AssignmentContext assignment() {
		AssignmentContext _localctx = new AssignmentContext(Context, State);
		EnterRule(_localctx, 8, RULE_assignment);
		try {
			State = 123;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,9,Context) ) {
			case 1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 96; compoundId();
				State = 97; Match(Equals);
				State = 101;
				ErrorHandler.Sync(this);
				switch ( Interpreter.AdaptivePredict(TokenStream,8,Context) ) {
				case 1:
					{
					State = 98; expression(0);
					}
					break;
				case 2:
					{
					State = 99; @object();
					}
					break;
				case 3:
					{
					State = 100; array();
					}
					break;
				}
				}
				break;
			case 2:
				EnterOuterAlt(_localctx, 2);
				{
				State = 103; compoundId();
				State = 104; Match(Equals);
				State = 105; expression(0);
				}
				break;
			case 3:
				EnterOuterAlt(_localctx, 3);
				{
				State = 107; compoundId();
				State = 108; Match(DivideEquals);
				State = 109; expression(0);
				}
				break;
			case 4:
				EnterOuterAlt(_localctx, 4);
				{
				State = 111; compoundId();
				State = 112; Match(MultiplyEquals);
				State = 113; expression(0);
				}
				break;
			case 5:
				EnterOuterAlt(_localctx, 5);
				{
				State = 115; compoundId();
				State = 116; Match(AddEquals);
				State = 117; expression(0);
				}
				break;
			case 6:
				EnterOuterAlt(_localctx, 6);
				{
				State = 119; compoundId();
				State = 120; Match(SubEquals);
				State = 121; expression(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IncrementContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ITerminalNode Increment() { return GetToken(MegaScryptParser.Increment, 0); }
		public ITerminalNode Decrement() { return GetToken(MegaScryptParser.Decrement, 0); }
		public IncrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_increment; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIncrement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IncrementContext increment() {
		IncrementContext _localctx = new IncrementContext(Context, State);
		EnterRule(_localctx, 10, RULE_increment);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 125; Match(Id);
			State = 126;
			_la = TokenStream.LA(1);
			if ( !(_la==Increment || _la==Decrement) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BincrementContext : ParserRuleContext {
		public ITerminalNode Id() { return GetToken(MegaScryptParser.Id, 0); }
		public ITerminalNode Increment() { return GetToken(MegaScryptParser.Increment, 0); }
		public ITerminalNode Decrement() { return GetToken(MegaScryptParser.Decrement, 0); }
		public BincrementContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_bincrement; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBincrement(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BincrementContext bincrement() {
		BincrementContext _localctx = new BincrementContext(Context, State);
		EnterRule(_localctx, 12, RULE_bincrement);
		int _la;
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 128;
			_la = TokenStream.LA(1);
			if ( !(_la==Increment || _la==Decrement) ) {
			ErrorHandler.RecoverInline(this);
			}
			else {
				ErrorHandler.ReportMatch(this);
			    Consume();
			}
			State = 129; Match(Id);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class BlockContext : ParserRuleContext {
		public StatementContext[] statement() {
			return GetRuleContexts<StatementContext>();
		}
		public StatementContext statement(int i) {
			return GetRuleContext<StatementContext>(i);
		}
		public BlockContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_block; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitBlock(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public BlockContext block() {
		BlockContext _localctx = new BlockContext(Context, State);
		EnterRule(_localctx, 14, RULE_block);
		int _la;
		try {
			State = 140;
			ErrorHandler.Sync(this);
			switch (TokenStream.LA(1)) {
			case T__1:
				EnterOuterAlt(_localctx, 1);
				{
				State = 131; Match(T__1);
				State = 135;
				ErrorHandler.Sync(this);
				_la = TokenStream.LA(1);
				while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__3) | (1L << T__7) | (1L << T__9) | (1L << T__10) | (1L << T__11) | (1L << T__13) | (1L << Var) | (1L << Increment) | (1L << Decrement) | (1L << Break) | (1L << Continue) | (1L << Id))) != 0)) {
					{
					{
					State = 132; statement();
					}
					}
					State = 137;
					ErrorHandler.Sync(this);
					_la = TokenStream.LA(1);
				}
				State = 138; Match(T__2);
				}
				break;
			case T__3:
			case T__7:
			case T__9:
			case T__10:
			case T__11:
			case T__13:
			case Var:
			case Increment:
			case Decrement:
			case Break:
			case Continue:
			case Id:
				EnterOuterAlt(_localctx, 2);
				{
				State = 139; statement();
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class IfStmtContext : ParserRuleContext {
		public ITerminalNode LeftParenthesis() { return GetToken(MegaScryptParser.LeftParenthesis, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode RightParenthesis() { return GetToken(MegaScryptParser.RightParenthesis, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseifStmtContext[] elseifStmt() {
			return GetRuleContexts<ElseifStmtContext>();
		}
		public ElseifStmtContext elseifStmt(int i) {
			return GetRuleContext<ElseifStmtContext>(i);
		}
		public ElseStmtContext elseStmt() {
			return GetRuleContext<ElseStmtContext>(0);
		}
		public IfStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_ifStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitIfStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public IfStmtContext ifStmt() {
		IfStmtContext _localctx = new IfStmtContext(Context, State);
		EnterRule(_localctx, 16, RULE_ifStmt);
		try {
			int _alt;
			EnterOuterAlt(_localctx, 1);
			{
			State = 142; Match(T__3);
			State = 143; Match(LeftParenthesis);
			State = 144; expression(0);
			State = 145; Match(RightParenthesis);
			State = 146; block();
			State = 150;
			ErrorHandler.Sync(this);
			_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
			while ( _alt!=2 && _alt!=global::Antlr4.Runtime.Atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					{
					State = 147; elseifStmt();
					}
					} 
				}
				State = 152;
				ErrorHandler.Sync(this);
				_alt = Interpreter.AdaptivePredict(TokenStream,12,Context);
			}
			State = 154;
			ErrorHandler.Sync(this);
			switch ( Interpreter.AdaptivePredict(TokenStream,13,Context) ) {
			case 1:
				{
				State = 153; elseStmt();
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseifStmtContext : ParserRuleContext {
		public ITerminalNode LeftParenthesis() { return GetToken(MegaScryptParser.LeftParenthesis, 0); }
		public ExpressionContext expression() {
			return GetRuleContext<ExpressionContext>(0);
		}
		public ITerminalNode RightParenthesis() { return GetToken(MegaScryptParser.RightParenthesis, 0); }
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseifStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseifStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseifStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseifStmtContext elseifStmt() {
		ElseifStmtContext _localctx = new ElseifStmtContext(Context, State);
		EnterRule(_localctx, 18, RULE_elseifStmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 156; Match(T__4);
			State = 157; Match(T__3);
			State = 158; Match(LeftParenthesis);
			State = 159; expression(0);
			State = 160; Match(RightParenthesis);
			State = 161; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}

	public partial class ElseStmtContext : ParserRuleContext {
		public BlockContext block() {
			return GetRuleContext<BlockContext>(0);
		}
		public ElseStmtContext(ParserRuleContext parent, int invokingState)
			: base(parent, invokingState)
		{
		}
		public override int RuleIndex { get { return RULE_elseStmt; } }
		public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor) {
			IMegaScryptVisitor<TResult> typedVisitor = visitor as IMegaScryptVisitor<TResult>;
			if (typedVisitor != null) return typedVisitor.VisitElseStmt(this);
			else return visitor.VisitChildren(this);
		}
	}

	[RuleVersion(0)]
	public ElseStmtContext elseStmt() {
		ElseStmtContext _localctx = new ElseStmtContext(Context, State);
		EnterRule(_localctx, 20, RULE_elseStmt);
		try {
			EnterOuterAlt(_localctx, 1);
			{
			State = 163; Match(T__4);
			State = 164; block();
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			ErrorHandler.ReportError(this, re);
			ErrorHandler.Recover(this, re);
		}
		finally {
			ExitRule();
		}
		return _localctx;
	}
